Correction Map size collapse overflow scroll popupinfo missing category and color

--- a/src/components/PopupInfo.css
+++ b/src/components/PopupInfo.css
@@ -153,9 +153,9 @@
 }
 
 .mapboxgl-popupup {
-    position: absolute !important;
-    top: 120px !important;
-    left: 20px !important;
+    position: absolute;
+    top: 60px;
+    left: 20px;
     background-color: #FFF;
     width: 240px;
     height: auto;
@@ -165,4 +165,16 @@
     box-shadow: 0px 0px 8px -3px #000;
     transition-duration: 1s;
     cursor: default;
+}
+
+.btn-close {
+    position: absolute;
+    top: 4px;
+    right: 4px;
+    cursor: pointer;
+    font-size: 11px;
+    border-radius: 50%;
+    background-color: #707172;
+    padding: 4px;
+    color: white;
 }
