--- a/src/components/css/App.css
+++ b/src/components/css/App.css
@@ -27,9 +27,9 @@
   to { transform: rotate(360deg); }
 }
 
-.mapboxgl-popup-content{
+/* .mapboxgl-popup-content{
   padding:0;
-}
+} */
 
 @media only screen and (max-width: 480px) {
   .mapboxgl-popup-content {
